# prompt-optimization

./: .gitignore  EAGLE_QWEN14B_REPORT.md  QWEN14B_ANIMAL_STEERING_REPORT.md  QWEN14B_MULTI_ANIMAL_ACTIVATION_ADC_REPORT.md  README.md  REPORT.md  desc.txt  pyproject.toml
outputs/: adc_margin_bear_len20_steps10_from_ga.csv  adc_margin_bear_len20_steps20_from_igcg_rank8.csv  adc_margin_bear_len20_steps40_from_ga.csv  bear_len30_top4_rank1_adc_gpu4.csv  bear_len30_top4_rank1_igcg_gpu0.csv  bear_len30_top4_rank2_adc_gpu5.csv  bear_len30_top4_rank2_igcg_gpu1.csv  bear_len30_top4_rank3_adc_gpu6.csv  bear_len30_top4_rank3_igcg_gpu2.csv  bear_len30_top4_rank4_adc_gpu7.csv  bear_len30_top4_rank4_igcg_gpu3.csv  final_followup_summary_bear_len30.csv  ga_margin_bear_len20_pop100_gen40.csv  ga_margin_bear_len20_pop100_gen400.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1000_gpu0.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1000_gpu0_population.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1001_gpu1.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1001_gpu1_population.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1002_gpu2.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1002_gpu2_population.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1003_gpu3.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1003_gpu3_population.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1004_gpu4.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1004_gpu4_population.csv  ga_multistart_Bear_len30_pop1024_gen400_bs256_seed1005_gpu5.csv  (+34 more)
(+9 files in other folders)
